--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jasmine": "^3.5.11",
     "@types/jquery": "^3.5.0",
     "awesome-typescript-loader": "^5.2.1",
+    "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
     "ejs-loader": "^0.5.0",
     "eslint": "^7.3.1",
