--- a/package.json
+++ b/package.json
@@ -32,11 +32,16 @@
     "@types/jasmine": "^3.5.11",
     "@types/jquery": "^3.5.0",
     "@types/jsdom": "^16.2.3",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
     "ejs-loader": "^0.5.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.4.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-airbnb-typescript": "^8.0.2",
+    "eslint-plugin-import": "^2.22.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "istanbul-instrumenter-loader": "^3.0.1",
